--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h2 {
 
 }
 button {
-    background-color:lightslategray;
+    background-color:lightgray;
     font-family:comic sans ms,sans-serif;
     font-size: 20px;
     border:2px outset darkslategray;
