--- a/travelstyle.css
+++ b/travelstyle.css
@@ -70,7 +70,7 @@ nav.meny{
 
 .imagebar{
     background-color: white;
-    background-image: url(/hitochdit/hitochdit/bilder/himmel.png);
+    background-image: url(himmel.png);
     background-size:100%;
     background-repeat:no-repeat;
     width:100%;
