--- a/travelstyle.css
+++ b/travelstyle.css
@@ -102,7 +102,7 @@ nav.meny{
 footer{
     width:100%;
     height:600px;
-    background-image: url(hitochdit/hitochdit/bilder/footer.gif);
+    background-image: url(footer.gif);
     background-repeat:no-repeat;
     background-color:#802082;
     background-size:100%;
