--- a/style.css
+++ b/style.css
@@ -28,5 +28,19 @@ button {
     border:2px outset darkslategray;
 }
 a {
-    font-size: 18px;
+    display:block;
+    font-size: 14px;
+    background-color: lightgray;
+    border: 2px outset darkslategray;
+    transition-duration: 1s;
+    padding:5px;
+    margin-bottom: 20px;
+    height:100%;
+    width:25%
+}
+a:hover{
+ background-color: tomato;
+ border: 4px outset darkslategray;
+ color:white;
+ font-size:16px;
 }
