--- a/calcstyle.css
+++ b/calcstyle.css
@@ -19,10 +19,13 @@
     width: 300px;
     padding-bottom: 15px;
     border-radius: 7px;
-    background-color: #000;
+    background-color: #111;
     box-shadow: 5px 8px 8px -2px rgba(0, 0, 0, 0.61);
     }
     /* calculator style end */
+.operator:hover{
+    background-color: #ff6673;
+}
     /* display */
 .display {
     width: 100%;
@@ -37,6 +40,12 @@
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     }
+button:hover{
+    background-color:#ff6673;
+    border:4px;
+    border-width: 5px;
+    border-color:#fff;
+}
     /* display style end */
     /* row */
 .row {
